change author value

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simkl-node",
   "version": "0.0.1",
-  "author": "gneiru",
+  "author": "Rohi <n@rohi.dev>",
   "repository": {
     "type": "git",
     "url": "https://github.com/gneiru/simkl-node.git"
