--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "simkl-node",
   "version": "0.1.0",
   "author": "Rohi <n@rohi.dev>",
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/gneiru/simkl-node.git"
@@ -15,12 +18,7 @@
     "lint": "tsc",
     "release": "pnpm run build && changeset publish"
   },
-  "keywords": [
-    "simkl",
-    "anime",
-    "api",
-    "node"
-  ],
+  "keywords": ["simkl", "anime", "api", "node"],
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "^1.7.1",
