--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "type": "git",
     "url": "https://github.com/gneiru/simkl-node.git"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "exports": {
+    "./simkl": {
+      "default": "./dist/simkl/index.js",
+      "types": "./dist/simkl/index.d.ts"
+    },
+    "./anime": {
+      "default": "./dist/anime/index.js",
+      "types": "./dist/anime/index.d.ts"
+    },
+    "./types": {
+      "default": "./dist/types/index.js",
+      "types": "./dist/types/index.d.ts"
+    }
+  },
   "scripts": {
     "fmt": "pnpm biome format . --write && pnpm biome check . --apply-unsafe",
     "build": "rm -rf dist && tsup",
