remove default import  from simkl/anime

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "simkl-node",
   "version": "0.2.1",
   "author": "Rohi <n@rohi.dev>",
-  "type": "module",
   "publishConfig": {
     "access": "public"
   },
@@ -10,23 +9,24 @@
     "type": "git",
     "url": "https://github.com/gneiru/simkl-node.git"
   },
-  "files": [
-    "./dist"
-  ],
   "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs"
     },
     "./anime": {
-      "import": "./dist/anime/index.js",
-      "types": "./dist/anime/index.d.ts"
+      "require": "./dist/anime/index.js",
+      "types": "./dist/anime/index.d.ts",
+      "import": "./dist/anime/index.mjs"
     },
     "./types": {
-      "import": "./dist/types/index.js",
-      "types": "./dist/types/index.d.ts"
+      "require": "./dist/types/index.js",
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/types/index.mjs"
     }
   },
   "scripts": {
@@ -35,12 +35,10 @@
     "lint": "tsc",
     "release": "pnpm run build && changeset publish"
   },
-  "keywords": [
-    "simkl",
-    "anime",
-    "api",
-    "node"
-  ],
+  "keywords": ["simkl", "anime", "api", "node"],
+  "bugs": {
+    "url": "https://github.com/gneiru/simkl-node/issues"
+  },
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "^1.7.1",
